ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: moviepepper-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - moviepepper.hfs.dev
    secretName: moviepepper-tls
  rules:
  - host: moviepepper.hfs.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: moviepepper-frontend
          servicePort: 80
      - path: /movies/
        backend:
          serviceName: moviepepper-backend
          servicePort: 80
      - path: /recommend/
        backend:
          serviceName: moviepepper-backend
          servicePort: 80
      - path: /recommend-d2v/
        backend:
          serviceName: moviepepper-backend
          servicePort: 80
