manifest.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: moviepepper-frontend
spec:
  type: NodePort
  selector:
    app: moviepepper-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moviepepper-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: moviepepper-frontend
  template:
    metadata:
      labels:
        app: moviepepper-frontend
    spec:
      containers:
      - name: moviepepper-frontend
        image: hugo19941994/moviepepper-frontend
        ports:
        - containerPort: 3000
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moviepepper-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - moviepepper.hfs.dev
    secretName: moviepepper-tls
  rules:
  - host: moviepepper.hfs.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moviepepper-frontend
            port:
              number: 80
      - path: /movies
        pathType: Prefix
        backend:
          service:
            name: moviepepper-backend
            port:
              number: 80
      - path: /recommend
        pathType: Prefix
        backend:
          service:
            name: moviepepper-backend
            port:
              number: 80
      - path: /recommend-d2v
        pathType: Prefix
        backend:
          service:
            name: moviepepper-backend
            port:
              number: 80
